add: idai-publications-logo as part of idai-header

--- a/js/idai-world.html
+++ b/js/idai-world.html
@@ -1,17 +1,14 @@
-<a
-	href="#"
-	data-toggle="dropdown"
-	aria-haspopup="true"
-	aria-expanded="false"
->
-	☰
-	<img id="idai-world-logo" alt="iDAI.world logo" />
-</a>
+<div>
+	<a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		☰ <img id="idai-world-logo" alt="iDAI.world logo" />
+	</a>
 
-<iframe
-	style="background-color: #fff;"
-	class="dropdown-menu"
-	aria-labelledby="idai-world-dropdown"
-	src="https://idai.world/config/idai-nav.html"
-	title="List of links to other iDAI.world resources."
-></iframe>
+	<iframe
+			style="background-color: #fff;"
+			class="dropdown-menu"
+			aria-labelledby="idai-world-dropdown"
+			src="https://idai.world/config/idai-nav.html"
+			title="List of links to other iDAI.world resources."
+	></iframe>
+
+</div>
