--- a/js/idai-world.html
+++ b/js/idai-world.html
@@ -1,14 +1,13 @@
-<div>
-	<a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		☰ <img id="idai-world-logo" alt="iDAI.world logo" />
-	</a>
+<a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	☰
+	<img id="iDAI.publications-logo" alt="iDAI.world logo" />
+</a>
 
-	<iframe
-			style="background-color: #fff;"
-			class="dropdown-menu"
-			aria-labelledby="idai-world-dropdown"
-			src="https://idai.world/config/idai-nav.html"
-			title="List of links to other iDAI.world resources."
-	></iframe>
+<iframe
+		style="background-color: #fff;"
+		class="dropdown-menu"
+		aria-labelledby="idai-world-dropdown"
+		src="https://idai.world/config/idai-nav.html"
+		title="List of links to other iDAI.world resources."
+></iframe>
 
-</div>
