set img src in html

--- a/js/idai-world.html
+++ b/js/idai-world.html
@@ -1,6 +1,6 @@
 <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	☰
-	<img id="iDAI.publications-logo" alt="iDAI.world logo" />
+	<img id="iDAI.publications-logo" src = "/journals/plugins/themes/publications-theme/images/logo_griffin.png" alt="iDAI.world logo" />
 </a>
 
 <iframe
