--- a/js/idai-world.html
+++ b/js/idai-world.html
@@ -1,8 +1,6 @@
 <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	☰
-	<img id="iDAI.publications-logo"
-		 src = "/journals/plugins/themes/publications-theme/images/idai.publications-logo.png"
-		 alt ="iDAI.publications logo" />
+	<img id="iDAI-publications-logo" alt ="iDAI-publications-logo" />
 </a>
 
 <iframe
