remove inline-styles

--- a/js/idai-world-footer.html
+++ b/js/idai-world-footer.html
@@ -1,41 +1,16 @@
 <!-- iDAI.world footer -->
-<div class="container" style="
-/* text-align: center; */
-/* padding: 100px 0 20px; */
-/* color: #fff; */
-/* background-color: #5882c2; */
-max-width: 1400px;
-padding-left: 80px;
-padding-right: 80px;
-">
+<div class="footer-container">
   <img src="https://idai.world/assets/images/content/footer/idai_footer.png" alt="DAI">
 </div>
-<div class="container additional-row" style="
-font-size: 0.9em;
-margin-top: 40px;
-">
-  <p style="font-family: 'Open Sans',sans-serif;">
-	  <span class="slogan" style="margin-right: 30px;">
-		  iDAI.world is a service of the German Archaeological Institute.</span>
-	  <span class="links" style="
-margin-right: 30px;
-">
-		  <a href="https://www.dainst.org/en/datenschutz" target="_blank" style="
-color: #5882c2;
-background-color: transparent;
-color: inherit;
-text-decoration: none;
-">Data Protection Regulation</a>
+<div class="footer-additional-row">
+  <p>
+	  <span class="slogan">
+		  iDAI.publications is a service of the German Archaeological Institute.</span>
+	  <span class="links">
+		  <a href="https://www.dainst.org/en/datenschutz" target="_blank">Data Protection Regulation</a>
 	  </span>
-	  <span class="links" style="
-margin-right: 30px;
-">
-		  <a href="/index/about/privacy" style="
-color: #5882c2;
-background-color: transparent;
-color: inherit;
-text-decoration: none;
-">Legal notice</a>
+	  <span class="links">
+		  <a href="/index/about/privacy">Legal notice</a>
 	  </span>
   </p>
 </div>
