replace footer img

--- a/js/idai-world-footer.html
+++ b/js/idai-world-footer.html
@@ -10,7 +10,7 @@
 		  <a href="https://www.dainst.org/en/datenschutz" target="_blank">Data Protection Regulation</a>
 	  </span>
 	  <span class="links">
-		  <a href="/index/about/privacy">Legal notice</a>
+		  <a href="index.php/index/about/privacy" target="_blank">Legal notice</a>
 	  </span>
   </p>
 </div>
