--- a/js/idai-world-footer.html
+++ b/js/idai-world-footer.html
@@ -1,6 +1,6 @@
 <!-- iDAI.world footer -->
 <div class="footer-container">
-  <img src="https://idai.world/assets/images/content/footer/idai_footer.png" alt="DAI">
+  <img src="/plugins/themes/publications-theme/images/idai_footer.png" alt="DAI">
 </div>
 <div class="footer-additional-row">
   <p>
