--- a/js/idai-world-footer.html
+++ b/js/idai-world-footer.html
@@ -1,8 +1,8 @@
 <!-- iDAI.world footer -->
-<div class="footer-container">
-  <img src="/plugins/themes/publications-theme/images/idai_footer.png" alt="DAI">
+<div id = "footer-container">
+  <!--- footer-logo <img src="/plugins/themes/publications-theme/images/idai_footer.png"> --->
 </div>
-<div class="footer-additional-row">
+<div id= "footer-additional-row">
   <p>
 	  <span class="slogan">
 		  iDAI.publications is a service of the German Archaeological Institute.</span>
