create footer elements by js-fn

--- a/js/idai-world-footer.html
+++ b/js/idai-world-footer.html
@@ -1,16 +1,15 @@
-<!-- iDAI.world footer -->
-<div id="footer-additional-row">
-  <p>
-	  <span class="slogan">
-		  iDAI.publications is a service of the German Archaeological Institute.</span>
-	  <span class="links">
-		  <a href="https://www.dainst.org/en/datenschutz" target="_blank">Data Protection Regulation</a>
-	  </span>
-	  <span class="links">
-		  <a href="index.php/index/about/privacy" target="_blank">Legal notice</a>
-	  </span>
-  </p>
-</div>
+<!-- additionalRow -->
+<p>
+  <span class="slogan">
+	  iDAI.publications is a service of the German Archaeological Institute.</span>
+  <span class="links">
+	  <a href="https://www.dainst.org/en/datenschutz" target="_blank">Data Protection Regulation</a>
+  </span>
+  <span class="links">
+	  <a href="index.php/index/about/privacy" target="_blank">Legal notice</a>
+  </span>
+</p>
+
 
 <!-- iDAI.publications footer elements
 <div class="pkp_structure_footer_wrapper" role="contentinfo" style="
