--- a/js/idai-world-footer.html
+++ b/js/idai-world-footer.html
@@ -1,47 +1,1 @@
-<!-- additionalRow -->
-<p>
-  <span class="slogan">
-	  iDAI.publications is a service of the German Archaeological Institute.</span>
-  <span class="links">
-	  <a href="https://www.dainst.org/en/datenschutz" target="_blank">Data Protection Regulation</a>
-  </span>
-  <span class="links">
-	  <a href="index.php/index/about/privacy" target="_blank">Legal notice</a>
-  </span>
-</p>
-
-
-<!-- iDAI.publications footer elements
-<div class="pkp_structure_footer_wrapper" role="contentinfo" style="
-    /* display: none; */
-    background: #6d8dbd;
-">
-	<a id="pkp_content_footer"></a>
-
-	<div class="pkp_structure_footer">
-		<div class="pkp_footer_content" style="color: white;font-family: &quot;Open Sans&quot;,sans-serif;">
-				<p style="
-    color: white;
-    font-size: 1.1em;
-">Contact: <a href="mailto:idai.publications@dainst.de" style="
-    text-decoration: none;
-    font-size: 1.1em;
-">idai.publications@dainst.de </a><a href="https://publications.dainst.org/journals/index.php/index/about/privacy" style="
-    display: none;
-">Imprint &amp; Terms of Use</a></p>
-			</div>
-
-		<div class="pkp_brand_footer" role="complementary" style="
-    text-align: center;
-    margin: 2vh auto;
-    max-width: 200px;
-">
-			<a href="https://publications.test.dainst.org/journals/index/about/aboutThisPublishingSystem">
-				<img alt="More information about the publishing system, Platform and Workflow by OJS/PKP." src="https://publications.test.dainst.org/journals/templates/images/ojs_brand.png" style="
-    /* color: red; */
-">
-			</a>
-		</div>
-	</div>
-</div>
--->
+<!-- iDAI.world-footer -->
