--- a/js/idai-world-header.html
+++ b/js/idai-world-header.html
@@ -1,10 +1,9 @@
+<!-- iDAI.world-header -->
 <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	☰
 </a>
 
-<iframe
-		style="background-color: #fff;"
-		class="dropdown-menu"
+<iframe class="dropdown-menu"
 		aria-labelledby="idai-world-dropdown"
 		src="https://idai.world/config/idai-nav.html"
 		title="List of links to other iDAI.world resources."
